--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -23,6 +23,8 @@ chrome-user-data
 .vscode
 *.swp
 *.swo
+.eslintcache
+Logs/
 
 packages/react-devtools-core/dist
 packages/react-devtools-extensions/chrome/build
